--- a/index.html
+++ b/index.html
@@ -10,41 +10,41 @@
     <div class="calculator">
         <div class="container">
             <div class="output">
-                <div class="previous-operand"></div>
-                <div class="current-operand"></div>
+                <div class="previous-operand" data-previous></div>
+                <div class="current-operand" data-current></div>
             </div>
             <div class="buttons">
                 <div class="row1">
-                    <button id="AC">AC</button>
-                    <button id="7">7</button>
-                    <button id="4">4</button>
-                    <button id="1">1</button>
-                    <button id="0">0</button>
+                    <button id="AC" data-all-clear>AC</button>
+                    <button id="7" data-number>7</button>
+                    <button id="4" data-number>4</button>
+                    <button id="1" data-number>1</button>
+                    <button id="0" data-number>0</button>
                 </div>
 
                 <div class="row2">
-                    <button id="DEL">DEL</button>
-                    <button id="8">8</button>
-                    <button id="5">5</button>
-                    <button id="2">2</button>
-                    <button id=".">.</button>
+                    <button id="DEL" data-delete>DEL</button>
+                    <button id="8" data-number>8</button>
+                    <button id="5" data-number>5</button>
+                    <button id="2" data-number>2</button>
+                    <button id="." data-number>.</button>
                 </div>
 
                 <div class="row3">
-                    <button id="%">%</button>
-                    <button id="6">6</button>            
-                    <button id="9">9</button>
-                    <button id="3">3</button>
-                    <button id="=">=</button>
+                    <button id="%" data-operation>%</button>
+                    <button id="6" data-number>6</button>            
+                    <button id="9" data-number>9</button>
+                    <button id="3" data-number>3</button>
+                    <button id="=" data-equals>=</button>
 
                 </div>
 
                 <div class="row4">
-                    <button id="OFF">OFF</button>
-                    <button id="÷">÷</button>
-                    <button id="×">×</button>
-                    <button id="+">-</button>
-                    <button id="-">+</button>
+                    <button id="OFF" data-off>OFF</button>
+                    <button id="÷" data-operation>÷</button>
+                    <button id="×" data-operation>×</button>
+                    <button id="+" data-operation>-</button>
+                    <button id="-" data-operation>+</button>
                 </div>
             </div>
         </div>
